progress on exercise

--- a/client/client.html
+++ b/client/client.html
@@ -5,7 +5,23 @@
   <link rel="stylesheet" type="text/css" href="/style.css">
   
   <script>
+    let nameForm;
+    let userForm;
 
+    const init = () => {
+      nameForm = document.querySelector('#nameForm');
+      userForm = document.querySelector('#userForm');
+    }
+
+    const addUser = () => {
+
+    }
+
+    const getUser = () => {
+
+    }
+
+    window.onload = init;
   </script>
 </head>
 <body>
