--- a/client/client.html
+++ b/client/client.html
@@ -18,8 +18,26 @@
       userForm.addEventListener('submit', getUser);
     }
 
-    const addUser = () => {
+    const addUser = async () => {
+      const userName = nameForm.querySelector('#nameField').value;
+      const userAge = nameForm.querySelector('#ageField').value;
+      const userData = `name=${userName}&age=${userAge}`;
 
+      const methodName = nameForm.getAttribute('method');
+      const url = nameForm.getAttribute('action')
+      let resposne = await fetch(url, {
+        method: methodName,
+        body: userData,
+      });
+
+      //Handle response
+      updateStatus(response.status);
+
+      let obj = await response.json;
+
+      if(obj.message){
+        content.innerhtml += `<div>${obj.message}</div>`;
+      }
     }
 
     const getUser = async () => {
@@ -27,10 +45,38 @@
       const method = userForm.querySelector('#methodSelect').value;
 
       let response = await fetch(url, {
-        method
+        method,
       });
 
       //Handle response
+      updateStatus(response.status);
+      let obj = await response.json
+      if(obj){
+        content.innerhtml += `<div>${obj}</div>`;
+      }
+    }
+
+    const updateStatus = (status) => {
+      switch(status){
+        case 200:
+          content.innerhtml = '<h1>Success</h1>';
+          break;
+        case 201:
+          content.innerhtml = '<h1>Created</h1>';
+          break;
+        case 204:
+          content.innerhtml = '<h1>Updated</h1>';
+          break;
+        case 400:
+          content.innerhtml = '<h1>Bad Request</h1>';
+          break;
+        case 404:
+          content.innerhtml = '<h1>Not Found</h1>';
+          break;
+        default:
+          content.innerhtml = '<h1>Not Found</h1>';
+          break;
+      }
     }
 
     window.onload = init;
